--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,7 @@ dependencies {
     implementation "org.sufficientlysecure:openpgp-api:12.0"
     implementation "me.jahirfiquitiva:FABsMenu:1.1.2"
     implementation "com.mikepenz:aboutlibraries:6.0.6"
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'com.tngtech.java:junit-dataprovider:1.13.1'
 }
